fixed section overflow bug

--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -25,7 +25,7 @@ $global-link-color: #0072ff;
 
 
 // HOME
-section {
+body {
   position: relative;
   overflow-x: hidden;
 }
